force-app/main/default/objects/Deployment_Flow_Step__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <formula>Stage_Connection__r.Next_Stage__c</formula>
    <label>Next Stage</label>
    <type>Text</type>
</CustomField>