force-app/main/default/objects/Deployment_Flow_Step__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>TEXT(Deployment_Flow__r.Platform__c)</formula>
    <label>Platform</label>
    <type>Text</type>
</CustomField>