force-app/main/default/objects/Deployment_Flow_Step__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Stage_Connection__r.Stage__c, Stage_Connection__r.Stage__r.Display_Name__c, &quot;_self&quot;)</formula>
    <inlineHelpText>Stage to which the source environment belongs.</inlineHelpText>
    <label>Stage</label>
    <type>Text</type>
</CustomField>