force-app/main/default/objects/Deployment_Flow_Step__c/fields/Stage_Connection__c.field-meta.xml
<CustomField>
    <fullName>Stage_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Stage Connection where the source environment belongs to.</inlineHelpText>
    <label>Stage Connection</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Stage Connections that belong to the same Pipeline.</errorMessage>
        <filterItems>
            <field>Stage_Connection__c.Pipeline__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deployment_Flow__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Stage_Connection__c</referenceTo>
    <relationshipLabel>Pipeline Connections</relationshipLabel>
    <relationshipName>Stage_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>