force-app/main/default/objects/Deployment_Flow_Step__c/validationRules/EnvironmentAndPipelinePlatformMustBeSame.validationRule-meta.xml
<ValidationRule>
    <fullName>EnvironmentAndPipelinePlatformMustBeSame</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
    BLANKVALUE(TEXT(Destination_Environment__r.Platform__c), &apos;Salesforce&apos;) &lt;&gt; BLANKVALUE(TEXT(Deployment_Flow__r.Platform__c), &apos;Salesforce&apos;), 
    BLANKVALUE(TEXT(Source_Environment__r.Platform__c), &apos;Salesforce&apos;) &lt;&gt; BLANKVALUE(TEXT(Deployment_Flow__r.Platform__c), &apos;Salesforce&apos;)
)</errorConditionFormula>
    <errorMessage>Platform for pipeline and Environment must match</errorMessage>
</ValidationRule>